# dbrownell_Dotter

./: .copier-answers.yml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CICD.yml  CICD_impl.yml
src/dbrownell_Dotter/: Configuration.py  Lib.py  __init__.py  __main__.py
tests/: Configuration_Test.py  Lib_Test.py  UvScaffolding_sample_file_test.py  __main___Test.py
